# FSQ-Agent

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  SPEC.md  config.example.yaml  config.local.android.yaml  config.local.web.yaml  config.local.windows.yaml  pyproject.toml  requirements.txt
docs/: fsq-agent-architecture-deep-dive.md  fsq-agent-architecture-v2.md  openai-agent-loop.md  step-runner-architecture.md
docs/assets/: fsq-agent-debug-knowledge-flow.mmd  fsq-agent-exploration-flow.mmd  fsq-agent-layered-architecture.mmd  fsq-agent-module-map.mmd  fsq-agent-regression-flow.mmd
examples/tasks/: open-example.yaml
fsq_agent/: __init__.py  _capability_bootstrap.py
fsq_agent/agent/: SPEC.md  __init__.py  _ai_assertion.py  _copilot_provider.py  _core.py  _events.py  _harness_tools.py  _openai_runtime.py  _pre_plan.py  _prompt.py  _structured_output.py  _verification_task.py  _verifier.py
fsq_agent/capabilities/: SPEC.md  __init__.py  _catalog.py  _decorators.py  _discovery.py
fsq_agent/cli/: SPEC.md  __init__.py  __main__.py  _capability_bootstrap.py  _core_execution.py  _formatting.py  _logging.py  _main.py  _pre_plan_formatting.py  _strict_case_recording.py  _strict_replay.py  _task_loader.py
fsq_agent/config/: SPEC.md  __init__.py  _loader.py  _paths.py  _settings.py
fsq_agent/core/: SPEC.md  __init__.py  _capabilities.py  _default_capabilities.py  _platform_tools.py
fsq_agent/fsq/: SPEC.md  __init__.py  _loader.py  _step_adapter.py  _task_adapter.py
fsq_agent/knowledge/: SPEC.md  __init__.py  _bundle.py  _loader.py  (+1 more)
knowledge/: index.md  project.md
tests/: test_agent.py  test_ai_assertion_evaluator.py  test_android_harness.py  test_artifact_store.py  test_capabilities.py  test_cli.py  test_cli_core_execution.py  test_cli_formatting.py  test_config.py  test_copilot_provider.py  test_core_contracts.py  test_core_evidence_report.py  test_evidence_recorder.py  test_fsq.py  test_fsq_evidence_manifest_smoke.py  test_fsq_executable_step_adapter.py  test_knowledge.py  test_models.py  test_openai_runtime.py  test_playground.py  test_playwright_web_driver.py  test_provider_session.py  test_report.py  test_shell_executor.py  test_skills.py  test_step_runner.py  test_step_sequence_runner.py  test_strict_case_recording.py  test_strict_replay.py  test_tools.py  test_uiautomator2_android_driver.py  test_verifier.py  test_web_harness.py  test_windows_harness.py
(+220 files in other folders)
