[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "fsq-agent"
version = "0.1.0"
description = "Goal-driven FSQ automated testing agent built around OpenAI Agents SDK, Azure OpenAI, harness actions, local utilities, observation, and reporting."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.25.0",
    "openai-agents>=0.15.2",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiofiles>=23.0.0",
    "structlog>=24.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
android = [
    "uiautomator2>=3.0.0",
]
web = [
    "playwright>=1.48.0",
]
windows = [
    "pywinauto>=0.6.8",
    "pillow>=10.0.0",
]

[project.scripts]
fsq-agent = "fsq_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["fsq_agent"]

[tool.hatch.build.targets.wheel.force-include]
"fsq_agent/agent/templates" = "fsq_agent/agent/templates"
"fsq_agent/playground/static" = "fsq_agent/playground/static"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
